@@ -158,6 +158,19 @@ sub _check_multiarch {
                 tag 'dependency-is-not-multi-archified', $proc->pkg_name . " depends on " . $dep->pkg_name . " (multi-arch: $dma)";
             }
         }
+    } elsif ($ma ne 'same' and $proc->info->field ('section', 'none') =~ m,(?:^|/)debug$,o) {
+        # Debug package that isn't M-A: same, exploit that (non-debug) dependencies
+        # is (almost certainly) a package for which the debug carries debug symbols.
+        foreach my $dep (@$deps) {
+            my $dma = $dep->info->field ('multi-arch', 'no');
+            if ($dma eq 'same' and $dep->info->field ('section', 'none') !~ m,(?:^|/)debug$,o) {
+                # Debug package isn't M-A: same, but depends on a package that is from same source
+                # that isn't a debug package and that is M-A same.  Thus it is not possible to
+                # install debug symbols for all (architecture) variants of the binaries.
+                tag 'debug-package-for-multi-arch-same-pkg-not-coinstallable',
+                    $proc->pkg_name . ' => ' . $dep->pkg_name;
+            }
+        }
     }
 }
 
