@@ -51,3 +51,24 @@ Certainty: possible
 Info: The package is Multi-Arch "same", but it depends on a package that
  is neither Multi-Arch "same" nor "foreign".
 Ref: https://wiki.ubuntu.com/MultiarchSpec
+
+Tag: debug-package-for-multi-arch-same-pkg-not-coinstallable
+Severity: minor
+Certainty: possible
+Info: The debug package appear to be containing debug symbols for a
+ "Multi-Arch: same" package, but the debug package itself is not
+ "Multi-Arch: same".  If so, it is not possible to have the debug
+ symbols for all architecture variants of the binaries available
+ at the same time.
+ .
+ Making a debug package co-installable with itself is very trival,
+ when installing the debug symbols beneath:
+   <tt>/usr/lib/debug/.build-id/&lt;XX&gt;/&ltpart-id&gt;/</tt>
+ .
+ dh_strip does this in debhelper compat 9.  Otherwise, the expected
+ location of the debug symbols of a given ELF binary can be determined
+ by using:
+ .
+  readelf -n &lt;binary-elf&gt; | \
+      perl -ne 'print if s,^\s*Build ID:\s*(\S\S)(\S+),/usr/lib/debug/.build-id/$1/$2.debug,'
+
